made summary box more responsive & fixd menu screen bckgrnd jump'n issue

--- a/Assets/tier2bStyle.css
+++ b/Assets/tier2bStyle.css
@@ -257,32 +257,6 @@
 
             /* ////////////////////// PART 2  /////////////////////////// */
             /* ---------------------------------------------------- */
-            @media screen and (max-width: 844px) { 
-                #innerboxes {   
-                    position: relative; left: -4.5%;;
-                    margin-left: 10px;
-                    box-shadow: 5px 5px 5px #656c6d;
-                } 
-                    #sloganBox {font-size: 1em;
-                        position: relative; top:10px; width:65.5%;  
-                        color:#000000; margin:auto; padding: 10px 20px 10px 20px;
-                        border-style:solid; border-color:#232327; 
-                        border-width:15px;  background-color:#414749; border-radius: 10px;
-                        box-shadow: 3px 2px 10px #4a4f50 inset} 
-                        /*MUST specify all (3).. width, style, & color of borders */
-                        
-
-                        #innerboxes {    font-size: 1.0em; 
-                                        box-shadow: 3px 3px 3px #656c6d;
-                                    } 
-
-                        #tableOfContentsTitle {  width:70%; margin-left:0px; }
-                        .tableOfContents{ margin-left:0px;}
-
-                        #tableComment {margin-left:0px;}
-                        li > p {font-size:0.8em; }
-
-                }
 
             @media screen and (max-width: 844px) { /* 801.999px */
                 #header1B{
@@ -357,3 +331,111 @@
                 cursor: pointer;
                 color: #ffffff;   
             }
+
+            /* ////////////////////// PART 3  /////////////////////////// */
+            /* ---------------------------------------------------- */
+            @media screen and (max-width: 844px) { 
+                #innerboxes {   
+                    position: relative; left: -1.5%;;
+                    margin-left: 10px;
+                    box-shadow: 5px 5px 5px #656c6d;
+                } 
+                    #sloganBox {font-size: 1em;
+                        position: relative; top:10px; width:65.5%;  
+                        color:#000000; margin:auto; padding: 10px 20px 10px 20px;
+                        border-style:solid; border-color:#232327; 
+                        border-width:15px;  background-color:#414749; border-radius: 10px;
+                        box-shadow: 3px 2px 10px #4a4f50 inset} 
+                        /*MUST specify all (3).. width, style, & color of borders */
+                        
+
+                        #innerboxes {    font-size: 1.0em; 
+                                        box-shadow: 3px 3px 3px #656c6d;
+                                    } 
+
+                        #tableOfContentsTitle {  width:70%; margin-left:0px; }
+                        .tableOfContents{ margin-left:0px;}
+
+                        #tableComment {margin-left:0px;}
+                        li > p {font-size:0.8em; }
+
+                }
+
+                @media screen and (max-width: 556px) { 
+                    #innerboxes {   
+                        position: relative; left: -3.5%;;
+                        margin-left: 10px;
+                        box-shadow: 5px 5px 5px #656c6d;
+                    } 
+                        #sloganBox {font-size: 1em;
+                            position: relative; top:10px; width:65.5%;  
+                            color:#000000; margin:auto; padding: 10px 20px 10px 20px;
+                            border-style:solid; border-color:#232327; 
+                            border-width:15px;  background-color:#414749; border-radius: 10px;
+                            box-shadow: 3px 2px 10px #4a4f50 inset} 
+                            /*MUST specify all (3).. width, style, & color of borders */
+                            
+    
+                            #innerboxes {    font-size: 1.0em; 
+                                            box-shadow: 3px 3px 3px #656c6d;
+                                        } 
+    
+                            #tableOfContentsTitle {  width:70%; margin-left:0px; }
+                            .tableOfContents{ margin-left:0px;}
+    
+                            #tableComment {margin-left:0px;}
+                            li > p {font-size:0.8em; }
+    
+                    }
+                    @media screen and (max-width: 375px) { 
+                        #innerboxes {   
+                            position: relative; left: -5.5%;;
+                            margin-left: 10px;
+                            box-shadow: 5px 5px 5px #656c6d;
+                        } 
+                            #sloganBox {font-size: 1em;
+                                position: relative; top:10px; width:65.5%;  
+                                color:#000000; margin:auto; padding: 10px 20px 10px 20px;
+                                border-style:solid; border-color:#232327; 
+                                border-width:15px;  background-color:#414749; border-radius: 10px;
+                                box-shadow: 3px 2px 10px #4a4f50 inset} 
+                                /*MUST specify all (3).. width, style, & color of borders */
+                                
+        
+                                #innerboxes {    font-size: 1.0em; 
+                                                box-shadow: 3px 3px 3px #656c6d;
+                                            } 
+        
+                                #tableOfContentsTitle {  width:70%; margin-left:0px; }
+                                .tableOfContents{ margin-left:0px;}
+        
+                                #tableComment {margin-left:0px;}
+                                li > p {font-size:0.8em; }
+        
+                        }
+                        @media screen and (max-width: 320px) { 
+                            #innerboxes {   
+                                position: relative; left: -7.5%;;
+                                margin-left: 10px;
+                                box-shadow: 5px 5px 5px #656c6d;
+                            } 
+                                #sloganBox {font-size: 1em;
+                                    position: relative; top:10px; width:65.5%;  
+                                    color:#000000; margin:auto; padding: 10px 20px 10px 20px;
+                                    border-style:solid; border-color:#232327; 
+                                    border-width:15px;  background-color:#414749; border-radius: 10px;
+                                    box-shadow: 3px 2px 10px #4a4f50 inset} 
+                                    /*MUST specify all (3).. width, style, & color of borders */
+                                    
+            
+                                    #innerboxes {    font-size: 1.0em; 
+                                                    box-shadow: 3px 3px 3px #656c6d;
+                                                } 
+            
+                                    #tableOfContentsTitle {  width:70%; margin-left:0px; }
+                                    .tableOfContents{ margin-left:0px;}
+            
+                                    #tableComment {margin-left:0px;}
+                                    li > p {font-size:0.8em; }
+            
+                            }
